- Implementa a documentação para delete product
